feat: add availability and importance

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:password@localhost:5432/hackathon_sr
+DATABASE_URL=postgresql://postgres:password@localhost:5432/hackathon_sr1
 JWT_SECRET=123456789
